<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDFFCC80"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="170dp"
        android:layout_height="127dp"
        android:layout_marginEnd="24dp"
        android:text="@string/text_view_top"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewTop"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <ImageView
        android:id="@+id/imageViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="289dp"
        android:layout_height="59dp"
        android:layout_marginBottom="420dp"
        android:contentDescription="@string/insert_id"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Accessibility" />

    <EditText
        android:id="@+id/etPlannedDate"
        android:layout_width="119dp"
        android:layout_height="92dp"
        android:layout_marginStart="40dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/report_planned_date"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDay"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textViewID"
        android:layout_width="201dp"
        android:layout_height="24dp"
        android:text="@string/insert_id"
        app:layout_constraintBottom_toTopOf="@+id/editTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTop"
        app:layout_constraintVertical_bias="0.823" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="152dp"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextID" />

    <TextView
        android:id="@+id/textViewDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/day"
        app:layout_constraintEnd_toStartOf="@+id/textViewTime"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextID" />
</androidx.constraintlayout.widget.ConstraintLayout>